feat: handle nested maps